--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>hello-java-spring-force_dot_com</artifactId>
+    <artifactId>streaming</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -13,9 +13,8 @@
 
     <repositories>
         <repository>
-            <id>sonatype-snapshots</id>
-            <snapshots/>
-            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <id>repo</id>
+            <url>https://raw.github.com/naamannewbold/repo/master/releases/</url>
         </repository>
     </repositories>
 
@@ -42,35 +41,15 @@
             <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>com.github.ryanbrainard</groupId>
-            <artifactId>richsobjects-core</artifactId>
-            <version>0.2-BETA-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.ryanbrainard</groupId>
-            <artifactId>richsobjects-jersey-client</artifactId>
-            <version>0.2-BETA-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.ryanbrainard</groupId>
-            <artifactId>richsobjects-memcached</artifactId>
-            <version>0.2-BETA-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.force.sdk</groupId>
-            <artifactId>force-oauth</artifactId>
-            <version>22.0.8-BETA</version>
-        </dependency>
-        <dependency>
-            <groupId>com.force.sdk</groupId>
-            <artifactId>force-springsecurity</artifactId>
-            <version>22.0.8-BETA</version>
-        </dependency>
-        <dependency>
             <groupId>com.github.jsimone</groupId>
             <artifactId>webapp-runner</artifactId>
             <version>7.0.22.3</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.force.sdk.streaming</groupId>
+            <artifactId>streaming</artifactId>
+            <version>0.13</version>
         </dependency>
     </dependencies>
 
