--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,37 +4,7 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
          version="2.5">
 
-    <display-name>Spring-Hibernate-Template</display-name>
-
-    <filter>
-      <filter-name>OAuthConfigChecker</filter-name>
-      <filter-class>com.example.config.OAuthConfigChecker</filter-class>
-    </filter>
-    <filter-mapping>
-      <filter-name>OAuthConfigChecker</filter-name>
-      <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        <init-param>
-            <param-name>contextAttribute</param-name>
-            <param-value>org.springframework.web.servlet.FrameworkServlet.CONTEXT.spring</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-
-    <welcome-file-list>
-        <welcome-file>index.jsp</welcome-file>
-    </welcome-file-list>
-
-    <context-param>
-        <param-name>defaultHtmlEscape</param-name>
-        <param-value>true</param-value>
-    </context-param>
+    <display-name>Streaming</display-name>
 
     <servlet>
         <servlet-name>spring</servlet-name>
@@ -47,10 +17,37 @@
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
-    
+
     <servlet-mapping>
         <servlet-name>spring</servlet-name>
         <url-pattern>/sfdc/*</url-pattern>
     </servlet-mapping>
-    
+
+    <servlet>
+        <servlet-name>cometd</servlet-name>
+        <servlet-class>org.cometd.server.CometdServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+        <init-param>
+            <param-name>timeout</param-name>
+            <param-value>20000</param-value>
+        </init-param>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>cometd</servlet-name>
+        <url-pattern>/cometd/*</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>initializer</servlet-name>
+        <servlet-class>com.force.sdk.streaming.server.ForceStreamingResource</servlet-class>
+        <load-on-startup>2</load-on-startup>
+    </servlet>
+
+    <welcome-file-list>
+        <welcome-file>index.jsp</welcome-file>
+    </welcome-file-list>
+
+    <context-param>
+        <param-name>defaultHtmlEscape</param-name>
+        <param-value>true</param-value>
+    </context-param>
 </web-app>
