--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,10 @@
         	<id>project.local</id>
         	<name>project</name>
         	<url>file:${project.basedir}/repo</url>
+        	<snapshots>
+       		 	<enabled>true</enabled>
+    			<checksumPolicy>fail</checksumPolicy>
+ 		 	</snapshots>
    		 </repository>
         
         <repository>
